# turbodash

./: .bumpversion.cfg  .gitignore  LICENSE  LICENSE.md  Procfile  README.md  app.py  pyproject.toml  render.yaml
.github/workflows/: publish_to_pypi.yaml
assets/: process.py
demos/: main.py  run_app_local.py  sensitivity_analysis.md  sensitivity_degree_reaction.py  sensitivity_flow_angle.py  sensitivity_radius_ratio.py  validation_vs_analytic.py
demos/excel_interface/: meanline_calculator.md  meanline_calculator.xlsm  readme.md  simple_test.py  simple_test.xlsm
demos/exergy_demo/: config_axial.yaml  config_radial.yaml  instructions.md  main.py  meanline_calculator.xlsm  run_app.py
demos/parametrization/: axial_turbine_blades.yaml  demo_axial_turbine_blades.py  demo_radial_turbine_blades.py  plot_axial_turbine_blades.py  radial_turbine_blades.yaml
demos/radial/: Novec649.yaml  R1233zd(E).yaml  equations.md  main.py  make_report.py
demos/roberto/: app.py  config_axial.yaml  config_radial.yaml  main.py  meanline_calculator.xlsm  meanline_calculator_old.xlsm
docs/: analytic_cases.md  documentation.md  efficiency_definition.md  equations_meanline.md  novel_aspects.md
tests/: test_core.py
turbodash/: __init__.py  _init__.py  app.py  app_meanline.py  app_turbine.py  core.py  core_stage.py  core_turbine.py  excel_interface.py  excel_interface_stage.py  excel_interface_turbine.py  geom_blade.py  graphics.py  math.py  plotting_mpl.py  plotting_plotly.py  plotting_plotly_stage.py  plotting_plotly_turbine.py  reporting_utils.py  utils.py
(+14 files in other folders)
