[tool.poetry]
name = "turbodash-core"
version = "0.2.1"
description = "Interactive Dash app for turbomachinery stage performance analysis"
authors = ["Roberto Agromayor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/turbo-sim/turbodash"
documentation = "https://github.com/turbo-sim/turbodash"
packages = [{ include = "turbodash" }]

[tool.poetry.scripts]
turbodash = "turbodash.app:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
gunicorn = "^22.0.0"
dash = "^3.2.0"
plotly = "^5.23.0"
numpy = "^2.3.0"
scipy = "^1.16.1"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.13,<8.17"
toml = "^0.10.2"
black = "^25.1.0"
pytest = "^8.3.5"
pyzotero = "^1.5.19"
numpydoc = "^1.7.0"
sphinx = "^7.3.7"
sphinx-tabs = "^3.4.5"
sphinx-book-theme = "^1.1.2"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinxawesome-theme = "^5.1.5"
sphinx-design = "^0.6.0"
sphinx-togglebutton = "^0.3.2"
bump2version = "^1.0.1"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Rememeber to add --tags when publishing a new version
# git push origin main --tags